--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ button:focus-visible {
 }
 
 section {
-  padding-bottom: 60px;
+  padding-bottom: 80px;
 }
 
 p {
