--- a/src/views/Resume/Resume.css
+++ b/src/views/Resume/Resume.css
@@ -11,13 +11,8 @@
   gap: 40px;
 }
 
-.resume button {
-  margin-top: 40px;
-}
-
 @media (max-width: 869px) {
   .resume__expertise-options {
     flex-direction: column;
-    gap: 0;
   }
 }
